# unified-inventory-service

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .protected_files.yaml  AGENTS.md  Containerfile  Makefile  README.md  app-dev-deploy.yml  entrypoint.sh  inspect_inventory.sh  manage.py  pyproject.toml  seed_providers.sh  settings.local.py.example  setup-aap-dev.sh  test_api.sh
.github/rulesets/: branch-protection.json
.github/workflows/: checks.yml  framework-update.yml  framework-validation.yml  tests.yml
apps/: __init__.py  urls.py
apps/core/: apps.py  authentication.py  renderers.py  resource_api.py  settings.py  urls.py
apps/core/middleware/: __init__.py  api_root_view.py  service_prefix.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  organization.py  team.py  user.py
apps/core/templates/rest_framework/: api.html
apps/core/templatetags/: core_tags.py
apps/core/tests/: test_api_root.py  test_health.py  test_middleware.py  test_models.py  test_templatetags.py
apps/core/tests/rbac/: conftest.py  test_viewset_permissions.py
apps/core/v1/: router.py  urls.py
apps/core/v1/serializers/: __init__.py  organization.py  team.py  user.py
apps/core/v1/viewsets/: __init__.py  base.py  organization.py  team.py  user.py
apps/core/views/: __init__.py  api_root.py  health.py  ping.py
apps/inventory/: apps.py  collector.py  dispatcher.py  settings.py  tasks.py  urls.py
apps/inventory/management/commands/: list_providers.py  run_dispatcher.py  seed_multivendor_data.py  seed_vmware_data.py
apps/inventory/migrations/: 0001_initial.py  0002_seed_taxonomy.py  0003_collectionrun_dispatcher_fields.py  0004_resource_identity_tracking.py  0005_resource_fields_property_definitions.py  0006_add_physical_server_orchestration_stack.py  0007_drift_tracking.py
apps/inventory/models/: __init__.py  collection.py  provider.py  resource.py  tags_and_metrics.py  taxonomy.py
apps/inventory/providers/: __init__.py  base.py  registry.py
apps/inventory/providers/_template/: __init__.py  provider.py
apps/inventory/providers/vmware_vsphere/: __init__.py  provider.py
apps/inventory/v1/: router.py  urls.py
apps/inventory/v1/serializers/: __init__.py  collection_run.py  drift.py  provider.py  provider_plugin.py  resource.py  taxonomy.py
apps/inventory/v1/viewsets/: __init__.py  collection_run.py  drift.py  provider.py  provider_plugin.py  resource.py  sighting.py  taxonomy.py
apps/settings/: __init__.py  database.py  defaults.py  development.py  production.py  test.py
inventory_providers/: __init__.py  base.py  registry.py
inventory_service/: asgi.py  settings.py  urls.py  wsgi.py
inventory_service/tests/: conftest.py
plugins/: README.md
tools/podman/: Containerfile.dev  compose.yaml
unified_inventory_service/: asgi.py  settings.py  urls.py  wsgi.py
